--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-        <title>imgPloadr.io</title>
+        <title>D-hall Creations</title>
         
 
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
@@ -12,7 +12,7 @@
         <div class="page-header">
             <div class="container">
                 <div class="col-md-6">
-                    <h1><a href="/">imgPloadr.io</a></h1>
+                    <h1><a href="/">dhall-creations.io</a></h1>
                 </div>
             </div>
         </div>
