--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,11 +22,9 @@
                     {{{body}}}
                 </div>
                 <div class="col-sm-4">
-                    {{> stats this }}
-
-            {{> popular this }}
-
-                    {{> comments this }}
+                
+                {{> tags this}}
+                
                 </div>
             </div>
         </div>
@@ -36,7 +34,7 @@
   
 
                   <div class="col-sm-12 text-center">
-                    <p class="text-muted">imgPloadr.io | &copy; Copyright 2014, All Rights Reserved</p>
+                    <p class="text-muted">Comp Sci 308 | &copy; Copyright 2017, All Rights Reserved</p>
          
                     <p class="text-center">
                             <i class="fa fa-twitter-square fa-2x text-primary"></i>
