--- a/views/image.handlebars
+++ b/views/image.handlebars
@@ -3,7 +3,7 @@
           <h2 class="panel-title">{{ image.title }}</h2>
      </div>
      <div class="panel-body">
-          <p>{{ image.recipe }}</p>
+          <p>{{ image.recipe.split("ingredients", 1) }}</p>
           <div class="col-md-12 text-center">
                <img src="/public/upload/{{image.filename}}" class="img-thumbnail">
           </div>
